--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ build/
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
+.idea/aws.xml
+.idea/workspace.xml
 *.iws
 *.iml
 *.ipr
@@ -40,3 +42,5 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+.idea/
+/.idea/
